--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <img src="/img/brand.png" alt="MUCIPA LOGO" class="header-brand">
-      <h1><a href="#">MUCIPA</a></h1>
+      <h1><a href="index/index.html">MUCIPA</a></h1>
       <nav>
 	  <a href="inicio.html">INICIO</a>
 	  <a href="artistas.html">ARTISTAS</a>
